--- a/style.css
+++ b/style.css
@@ -12,3 +12,7 @@
 	background-position: 0 0;
   color: white;
 }
+.shadow-box{
+	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 
+	0 10px 10px rgba(0,0,0,0.22);
+}
