--- a/style.css
+++ b/style.css
@@ -16,3 +16,12 @@
 	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 
 	0 10px 10px rgba(0,0,0,0.22);
 }
+.orange{
+	border: solid 2px !important;
+	background-color: #FF4B2B !important;
+	color: white !important;
+}
+.orange:hover{
+	transform: scale(1.05);
+
+}
